@@ -1,5 +1,9 @@
 shady-skin Revision History
 ----------------------------------
+
+2016-02-22:
+- Fixed int- and channel-selector in tvguideng-recmenu
+
 2016-02-21:
 - Conformed plex-grids to shady_KISS
 - Reimplemented support for plexplugin
